# OP_2025_2

./: .gitignore  README.md  requirements.txt
accumap_rs/: Cargo.toml  pyproject.toml
accumap_rs/src/: lib.rs
analysis_scripts/: FigSmasher3000.ipynb  New_Simulation.ipynb  New_Simulation_Old_Diffusion.ipynb  Original_Simulation.ipynb  Real_Data_Exploratory.ipynb  accumap.py  new_sim_fit.csv  new_sim_raw_truth.csv
tests/: test_accumap_rust_vs_python.py
